[package]
name = "ncm2mp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4"
hex = "*"
aes = "*"
ecb = "*"
base64ct = {version = "*", features = ["alloc"]}
serde_json = "*"
serde = { version = "*", features = ["derive"] }