[package]
name = "ncm2mp3"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 16进制工具
hex-literal = "0.4"
hex = "*"
# AES_ECB
aes = "*"
ecb = "*"
# base64
base64ct = { version = "*", features = ["alloc"] }
# json工具
serde_json = "*"
serde = { version = "*", features = ["derive"] }
# ERROR工具
anyhow = "*"
# 异步运行时
tokio = { version = "*", features = ["fs", "rt-multi-thread", "time", "io-util"] }
# 下载进度条
indicatif = "*"
# 命令行解析
clap = { version = "*", features = ["derive"] }
# 日志
env_logger = "*"
log = "*"
chrono = "*"
colored = "*"
# 初始化
once_cell = "*"